--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.ai:spring-ai-starter-model-ollama'
   implementation 'org.jsoup:jsoup:1.17.2'
+  implementation 'org.graalvm.polyglot:python:24.1.0'
   implementation 'org.graalvm.polyglot:polyglot:24.1.0'
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
 	compileOnly 'org.projectlombok:lombok'
